# causal-lair

./: .envrc  .gitattributes  .gitignore  AIRTool_v2.2.qmd  CLAUDE.md  Dockerfile  HOST_SETUP.md  OLLAMA_INTEGRATION_PLAN.md  README  README.md  Results.csv  _quarto.yml  airtool.qmd  cliff.toml  compose.yaml.bak  dotfile.txt  dprint.json  error_log.txt  flake.nix  graphtxt.txt  graphtxt_test.txt  info.html  info.qmd  knowledge_file.md  license.xt  release_notes.md  report.qmd  result-x86  scan_results.txt  settings_log.csv  tailor---air.Rproj
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.obsidian/: workspace.json
container-files/: config.fish  create-user.sh  license.txt  plugins.fish  settings.json
data/: Results.csv  ResultsOut.csv  datafile.csv  scenario_main_base-Z1-data.csv  scenario_main_base-Z2-data.csv
doc/: Installation_Instructions.md  Key_concepts_and_references.md  README_score.md  calculating_ATE.md  causal_graph_checks.md  dataset_guidelines.md  getting_started.md  interpretation-states.md  interpreting_results.md  knowledge_file.docx  knowledge_file.md  log_retrieval_instructions.docx  log_retrieval_instructions.md  scenario_definition_worksheet  scenario_definition_worksheet.md  scenario_worksheet.md
identify/: Cargo.toml  flake.nix
input/: .~lock.knowledge.csv#  5 Know PSPxlsx.csv  5know_pspxslx.csv  UAV_data.csv  UAV_data_raw.csv  UAV_knowledge_9tier.csv  UAV_knowledge_raw.csv  data-tsv.csv  data.csv  knowledge-bad.csv  knowledge-nonsense.csv  knowledge-typo+header.csv  knowledge-typo.csv  knowledge.csv  knowledge.xlsx  model.rda  psp_c_pivot_v2.csv  psp_c_pivot_v2_subset.csv
keys/: builder_ed25519  builder_ed25519.pub
logs/: 2025-03-20_11-14-33_error_log.txt  2025-03-20_11-19-19_error_log.txt  2025-03-20_11-26-35_error_log.txt  2025-03-20_11-26-40_error_log.txt  2025-03-20_11_11_16_error_log.txt
score/: Cargo.toml  lib.rs  main.rs
scripts/: .gitignore  AIRReport.qmd  AIRReport.tex  AIR_functions.R  TetradSearch.R  Zvars_test.csv  graphtxt.txt  identify  identify.R  identify.r  install_dependencies.R  install_linux_dependencies.sh  run_quarto.sh  (+3 more)
(+85 files in other folders)
