# AIR Tool
#
# Copyright 2024 Carnegie Mellon University.
#
# NO WARRANTY. THIS CARNEGIE MELLON UNIVERSITY AND SOFTWARE ENGINEERING INSTITUTE
# MATERIAL IS FURNISHED ON AN "AS-IS" BASIS. CARNEGIE MELLON UNIVERSITY MAKES NO
# WARRANTIES OF ANY KIND, EITHER EXPRESSED OR IMPLIED, AS TO ANY MATTER
# INCLUDING, BUT NOT LIMITED TO, WARRANTY OF FITNESS FOR PURPOSE OR
# MERCHANTABILITY, EXCLUSIVITY, OR RESULTS OBTAINED FROM USE OF THE MATERIAL.
# CARNEGIE MELLON UNIVERSITY DOES NOT MAKE ANY WARRANTY OF ANY KIND WITH RESPECT
# TO FREEDOM FROM PATENT, TRADEMARK, OR COPYRIGHT INFRINGEMENT.
#
# Licensed under a MIT (SEI)-style license, please see license.txt or contact
# permission_at_sei.cmu.edu for full terms.
#
# [DISTRIBUTION STATEMENT A] This material has been approved for public release
# and unlimited distribution.  Please see Copyright notice for non-US Government
# use and distribution.
#
# This Software includes and/or makes use of Third-Party Software each subject to
# its own license.
#
# DM24-1686

[package]
name = "boss_scoring"
version = "0.1.0"
edition = "2021"

[dependencies]
# For matrix operations, we can use 'ndarray' or something similar:
ndarray = "0.16"
# For log, exp, etc. we can just use Rust std or 'num-traits'
num-traits = "0.2"

lapack = { version = "0.19" }
lapack-sys = { version = "0.14" }
ndarray-linalg = { version = "0.17", features = ["openblas"] }

[lib]
name = "boss_scoring"
path = "src/lib.rs"

[[bin]]
name = "score_driver"
path = "src/main.rs"

[dependencies.openblas-src]
version = "0.10"
optional = false
features = ["system"]
